--- a/README.me
+++ b/README.me
@@ -1,1 +1,22 @@
-# TASK1
+# Age Calculator
+
+## Description
+This is a web-based age calculator that determines a person's age based on their submitted date of birth, including the number of years, and months lived. The calculator also allows users to input the time of birth for more accurate calculations.
+
+## Features
+- Calculate age in years, and months.
+- Ability to input the time of birth for precise calculations.
+
+## Technologies Used
+- HTML
+- CSS
+- JavaScript
+
+
+## How to Use
+1. Enter the birth date (day, month, and year) in the input fields.
+2. Click the "Calculate Age" button.
+3. The age will be displayed in the result section.
+
+## How to Run
+Simply open the `index.html` file in a web browser to use the age calculator.
